--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="title"><h2><em><b>404 NOT FOUND</b></em></h2></div>
         <div class="image">
-            <img src="/scarecrow.png" alt="Scarecrow Image" style="max-width: 70%;">
+            <img src="scarecrow.png" alt="Scarecrow Image" style="max-width: 70%;">
         </div>
         <div class="content">
             <h1>I have bad news for you</h1>
